--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,65 @@
 aiohttp==3.9.3
+aiosignal==1.3.1
+annotated-types==0.6.0
+attrs==23.2.0
+azure-core==1.30.0
+blinker==1.7.0
+blis==0.7.11
+botbuilder==0.0.1
 botbuilder-core==4.14.8
-spacy==3.7.4
+botbuilder-schema==4.14.8
+botframework-connector==4.14.8
+botframework-streaming==4.14.8
+catalogue==2.0.10
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+cryptography==42.0.5
+cymem==2.0.8
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl#sha256=61e6e5530941f5880166855f09f60d7e6ba79ec1e8e45f96244bdb1eb169eb1d
+Flask==3.0.2
+frozenlist==1.4.1
+idna==3.6
+isodate==0.6.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
+jsonpickle==1.4.2
+langcodes==3.3.0
 langdetect==1.0.9
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl#sha256=61e6e5530941f5880166855f09f60d7e6ba79ec1e8e45f96244bdb1eb169eb1d
+MarkupSafe==2.1.5
+msal==1.27.0
+msrest==0.7.1
+multidict==6.0.5
+murmurhash==1.0.10
+numpy==1.26.4
+oauthlib==3.2.2
+packaging==23.2
+preshed==3.0.9
+pycparser==2.21
+pydantic==2.6.3
+pydantic_core==2.16.3
+PyJWT==2.8.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+setuptools==69.1.1
+six==1.16.0
+smart-open==6.4.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+thinc==8.2.3
+tqdm==4.66.2
+typer==0.9.0
+typing_extensions==4.10.0
+ujson==5.9.0
+urllib3==1.26.18
+wasabi==1.1.2
+weasel==0.3.4
+Werkzeug==3.0.1
+yarl==1.9.4
